# AULAS/aula7/controller/filme/controller_filme_genero.js
@@ -1,0 +1,253 @@
+/***************************************************************************************************************
+ * Objetivo: Arquivo responsável pela validação, tratamento, manipulação de dados para realizar o CRUD de Filme Gênero
+ * Data: 22/05/2026
+ * Autor: Pyetro Ferreira
+ * Versão: 1.0
+ ***************************************************************************************************************/
+
+//Import do arquivo de conigurações de mensagens do projeto
+const configMessage = require("../modulo/configMessage.js")
+
+//Import do arquivo do DAO para manipular os dados de filme no Banco de Dados
+const filmeGeneroDAO = require('../../model/DAO/filme_genero/filme_genero.js')
+
+//Função para inserir um novo FilmeGenero
+const inserirNovoFilmeGenero = async function (filmeGenero) {
+
+    let customMessage = JSON.parse(JSON.stringify(configMessage))
+
+    try {
+        let validar = await validarDados(filmeGenero)
+
+        if (validar) {
+            return validar
+        } else {
+            let result = await filmeGeneroDAO.insertFilmeGenero((filmeGenero))
+
+
+            if (result) {
+                filmeGenero.id = result
+                customMessage.DEFAULT_MESSAGE.status = customMessage.SUCCESS_CREATED_ITEM.status
+                customMessage.DEFAULT_MESSAGE.status_code = customMessage.SUCCESS_CREATED_ITEM.status_code
+                customMessage.DEFAULT_MESSAGE.message = customMessage.SUCCESS_CREATED_ITEM.message
+                customMessage.DEFAULT_MESSAGE.response = filmeGenero
+                return customMessage.DEFAULT_MESSAGE
+            }
+            else {
+                return customMessage.ERROR_INTERNAL_SERVER_MODEL
+            }
+        }
+
+    } catch (error) {
+        return customMessage.ERROR_INTERNAL_SERVER_CONTROLLER
+    }
+}
+//Função para atualizar um novo FilmeGenero
+const atualizarFilmeGenero = async function (filmeGenero, id) {
+
+    let customMessage = JSON.parse(JSON.stringify(configMessage))
+
+    try {
+
+        let resultBuscarFilmeGenero = await buscarFilmeGenero(id)
+
+        if (resultBuscarFilmeGenero.status) {
+            let validar = await validarDados(filmeGenero)
+            if (!validar) {
+                filmeGenero.id = Number(id)
+
+                let result = await filmeGeneroDAO.updateFilmeGenero((filmeGenero))
+
+                if (result) {
+                    customMessage.DEFAULT_MESSAGE.status = customMessage.SUCCESS_UPDATE_ITEM.status
+                    customMessage.DEFAULT_MESSAGE.status_code = customMessage.SUCCESS_UPDATE_ITEM.status_code
+                    customMessage.DEFAULT_MESSAGE.message = customMessage.SUCCESS_UPDATE_ITEM.message
+                    customMessage.DEFAULT_MESSAGE.response = filmeGenero
+
+                    return customMessage.DEFAULT_MESSAGE //200
+                } else {
+                    return customMessage.ERROR_INTERNAL_SERVER_MODEL
+                }
+            } else {
+                return validar
+            }
+        } else {
+            return resultBuscarFilmeGenero
+        }
+    } catch (error) {
+        return customMessage.ERROR_INTERNAL_SERVER_CONTROLLER
+    }
+}
+//Função para lista FilmeGenero
+const listarFilmeGenero = async function () {
+
+    let customMessage = JSON.parse(JSON.stringify(configMessage))
+
+
+    try {
+        let result = await filmeGeneroDAO.selectAllFilmeGenero()
+
+        if (result) {
+            if (result.length > 0) {
+                customMessage.DEFAULT_MESSAGE.status = customMessage.SUCCESS_RESPONSE.status
+                customMessage.DEFAULT_MESSAGE.status_code = customMessage.SUCCESS_RESPONSE.status_code
+                customMessage.DEFAULT_MESSAGE.response.count = result.length
+                customMessage.DEFAULT_MESSAGE.response.filme_genero = result
+
+                return customMessage.DEFAULT_MESSAGE
+            } else {
+                return customMessage.ERROR_NOT_FOUND
+            }
+        } else {
+            return customMessage.ERROR_INTERNAL_SERVER_MODEL
+        }
+    } catch (error) {
+        return customMessage.ERROR_INTERNAL_SERVER_CONTROLLER
+    }
+
+}
+//Função para buscar um novo FilmeGenero
+const buscarFilmeGenero = async function (id) {
+
+    let customMessage = JSON.parse(JSON.stringify(configMessage))
+
+    try {
+        if (id == undefined || String(id).replaceAll(' ', '') == '' || id == null || isNaN(id) || id <= 0) {
+            customMessage.ERROR_BAD_REQUEST.field = '[ID] INVÁLIDO'
+
+            return customMessage.ERROR_BAD_REQUEST
+        } else {
+            let result = await filmeGeneroDAO.selectByIdFilmeGenero(id)
+            if (result) {
+                if (result.length > 0) {
+                    customMessage.DEFAULT_MESSAGE.status = customMessage.SUCCESS_RESPONSE.status
+                    customMessage.DEFAULT_MESSAGE.status_code = customMessage.SUCCESS_RESPONSE.status_code
+                    customMessage.DEFAULT_MESSAGE.response.filme_genero = result
+
+                    return customMessage.DEFAULT_MESSAGE
+                } else {
+                    return customMessage.ERROR_NOT_FOUND
+                }
+            } else {
+                return customMessage.ERROR_INTERNAL_SERVER_MODEL
+            }
+        }
+    } catch (error) {
+        return customMessage.ERROR_INTERNAL_SERVER_CONTROLLER
+    }
+
+}
+//Função para buscar os generos filtrando pelo ID do Filme
+const buscarGenerosIdFilme = async function (idFilme) {
+
+    let customMessage = JSON.parse(JSON.stringify(configMessage))
+
+    try {
+        if (idFilme == undefined || String(idFilme).replaceAll(' ', '') == '' || idFilme == null || isNaN(idFilme) || idFilme <= 0) {
+            customMessage.ERROR_BAD_REQUEST.field = '[ID_FILME] INVÁLIDO'
+
+            return customMessage.ERROR_BAD_REQUEST
+        } else {
+            let result = await filmeGeneroDAO.selectGeneroByIdFilme(idFilme)
+            if (result) {
+                if (result.length > 0) {
+                    customMessage.DEFAULT_MESSAGE.status = customMessage.SUCCESS_RESPONSE.status
+                    customMessage.DEFAULT_MESSAGE.status_code = customMessage.SUCCESS_RESPONSE.status_code
+                    customMessage.DEFAULT_MESSAGE.response.filme_genero = result
+
+                    return customMessage.DEFAULT_MESSAGE
+                } else {
+                    return customMessage.ERROR_NOT_FOUND
+                }
+            } else {
+                return customMessage.ERROR_INTERNAL_SERVER_MODEL
+            }
+        }
+    } catch (error) {
+        return customMessage.ERROR_INTERNAL_SERVER_CONTROLLER
+    }
+
+}
+
+//Função para buscar os filmes filtrando pelo ID do Genero
+const buscarFilmesIdGenero = async function (idGenero) {
+
+    let customMessage = JSON.parse(JSON.stringify(configMessage))
+
+    try {
+        if (idGenero == undefined || String(idGenero).replaceAll(' ', '') == '' || idGenero == null || isNaN(idGenero) || idGenero <= 0) {
+            customMessage.ERROR_BAD_REQUEST.field = '[ID_GENERO] INVÁLIDO'
+
+            return customMessage.ERROR_BAD_REQUEST
+        } else {
+            let result = await filmeGeneroDAO.selectFilmesByIdGenero(idGenero)
+            if (result) {
+                if (result.length > 0) {
+                    customMessage.DEFAULT_MESSAGE.status = customMessage.SUCCESS_RESPONSE.status
+                    customMessage.DEFAULT_MESSAGE.status_code = customMessage.SUCCESS_RESPONSE.status_code
+                    customMessage.DEFAULT_MESSAGE.response.filme_genero = result
+
+                    return customMessage.DEFAULT_MESSAGE
+                } else {
+                    return customMessage.ERROR_NOT_FOUND
+                }
+            } else {
+                return customMessage.ERROR_INTERNAL_SERVER_MODEL
+            }
+        }
+    } catch (error) {
+        return customMessage.ERROR_INTERNAL_SERVER_CONTROLLER
+    }
+
+}
+//Função para excluir um FilmeGenero
+const excluirGenero = async function (id) {
+    let customMessage = JSON.parse(JSON.stringify(configMessage))
+    try {
+        let buscarFilmeGeneroResult = await buscarFilmeGenero(id)
+
+        if (buscarFilmeGeneroResult.status) {
+            let result = await filmeGeneroDAO.deleteFilmeGenero(id)
+
+            if (result) {
+                customMessage.DEFAULT_MESSAGE.status = customMessage.SUCCESS_DELETED_ITEM.status
+                customMessage.DEFAULT_MESSAGE.status_code = customMessage.SUCCESS_DELETED_ITEM.status_code
+                customMessage.DEFAULT_MESSAGE.message = customMessage.SUCCESS_DELETED_ITEM.message
+
+                return customMessage.DEFAULT_MESSAGE
+            } else {
+                return customMessage.ERROR_INTERNAL_SERVER_MODEL
+            }
+
+        } else {
+            return buscarFilmeGeneroResult
+        }
+    } catch (error) {
+        return customMessage.ERROR_INTERNAL_SERVER_CONTROLLER
+    }
+}
+
+const validarDados = async function (filmeGenero) {
+    let customMessage = JSON.parse(JSON.stringify(configMessage))
+
+    if (filmeGenero.id_filme == undefined || filmeGenero.id_filme == '' || filmeGenero.id_filme == null || isNaN(filmeGenero.id_filme) || filmeGenero.id_filme <= 0) {
+        customMessage.ERROR_BAD_REQUEST.field = '[ID_FILME] INVÁLIDO'
+    } else if (filmeGenero.id_genero == undefined || filmeGenero.id_genero == '' || filmeGenero.id_genero == null || isNaN(filmeGenero.id_genero) || filmeGenero.id_genero <= 0) {
+        customMessage.ERROR_BAD_REQUEST.field = '[ID_GENERO] INVÁLIDO'
+    } else {
+        return false
+    }
+
+}
+
+
+
+module.exports = {
+    inserirNovoFilmeGenero,
+    atualizarFilmeGenero,
+    listarFilmeGenero,
+    buscarFilmeGenero,
+    buscarGenerosIdFilme,
+    buscarFilmesIdGenero,
+    excluirGenero
+}
